Updated by task 'AutomatedMDTask_1644002406776_TM-MT_1644002424208'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics-platform.en/commit/202761b02253bbf46c7c7feb7357302c6bbc64f9

--- a/help/release-notes/2021.md
+++ b/help/release-notes/2021.md
@@ -3,16 +3,16 @@ title: Versionshinweise für Customer Journey Analytics 2021 anzeigen
 description: Versionshinweise zur CJA für 2021
 exl-id: 8647ebfc-59cf-44ab-8869-11e892eab84e
 feature: Release Notes
-source-git-commit: c36dddb31261a3a5e37be9c4566f5e7ec212f53c
+source-git-commit: ac7181fe5629bf04b2f0c79358501a05cb99b02b
 workflow-type: tm+mt
-source-wordcount: '520'
-ht-degree: 79%
+source-wordcount: '2005'
+ht-degree: 94%
 
 ---
 
 # Versionshinweise zu Customer Journey Analytics 2021
 
-## November 2021
+## November 2021 {#1121}
 
 | Funktion | Beschreibung | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/technotes/releases.html?lang=de) – geplantes Datum |
 | ----------- | ---------- | ----- |
@@ -30,21 +30,96 @@ ht-degree: 79%
 * Es wurde ein Problem in CJA behoben, bei dem die Sitzungsstarts nicht mit den Flusseinträgen für Seitennamen übereinstimmten. (AN-273501)
 * Es wurde ein Problem behoben, bei dem der Fallout-Bericht in CJA nicht ordnungsgemäß funktionierte. (AN-269761)
 
-## Oktober 2021
+## Oktober 2021 {#1021}
+
+| Funktion | Beschreibung | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/technotes/releases.html?lang=de) – geplantes Datum |
+| ----------- | ---------- | ----- |
+| Rollierendes Fenster für die Datenaufbewahrung auf [!UICONTROL Verbindungsebene] | **Hinweis: Wenden Sie sich an die Kundenunterstützung oder Ihren Adobe Account Manager, um diese Einstellung implementieren zu lassen. Sie ist noch nicht über die UI von CJA verfügbar.**<p>Ermöglicht die Definition einer CJA-Datenbeibehaltungseinstellung als rollierendes Fenster in Monaten (3 Monate, 6 Monate usw.) auf einer [!UICONTROL Verbindungs]-Ebene (nicht auf einer [!UICONTROL Datensatz]-Ebene). Die Datenaufbewahrung basiert auf Zeitstempeln für Ereignis-Datensätze und gilt nur für Ereignis-Datensätze. Für Profil- oder Lookup-Datensätze gibt es keine Datenaufbewahrungseinstellung, da keine entsprechenden Zeitstempel vorhanden sind. Der Hauptvorteil besteht darin, dass Sie nur Daten speichern oder Berichte dazu erstellen, die anwendbar und nützlich sind, und ältere Daten löschen, die nicht mehr nützlich sind. Dies hilft Ihnen, Ihre vertraglichen Beschränkungen einzuhalten und das Risiko bezüglich Kostendeckung zu reduzieren. | 7. Oktober 2021 |
+| Report Builder-Support | Report Builder ist ein Microsoft® [!DNL Excel]-Add-in, mit dem Sie benutzerspezifische Berichte einfach erstellen, bearbeiten und aktualisieren können, indem Sie Customer Journey Analytics-Daten verwenden. Mit Report Builder und Excel können Sie die einfache, aber flexible Drag-and-Drop-Benutzeroberfläche verwenden, um einfach komplexe Datenanforderungen zu erstellen. Report Builder für Customer Journey Analytics ermöglicht Ihnen Folgendes:<ul><li>Referenzieren vorhandener Arbeitsblattzellen zur Erstellung der gewünschten Zeilenreihenfolge sowie des entsprechenden Datumsbereichs oder Filters</li><li>Erstellen von benutzerdefinierten Datumsangaben mithilfe von Kalendern, Zellbezügen oder mathematischen Berechnungen</li><li>Gestalten Ihrer Tabellen und Visualisierungen mit den bekannten Excel-Formatierungswerkzeugen</li><li>Verfügbar für Excel unter macOS, Microsoft 365 für das Web und Microsoft Windows</li></ul>[Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-reportbuilder/report-buider-overview.html?lang=de) | 7. Oktober 2021 |
+| Visualisierungen für Analytics-Dashboards | Analytics [!UICONTROL Dashboards] führt drei neue Visualisierungen ein, um Führungskräften und Entscheidungsträgern einen noch besseren Überblick über ihre Daten zu vermitteln. Die neuen Ring-, Linien- und horizontalen Balkendiagramme erleichtern die Anzeige von Daten für einzelne Dimensionselemente, ohne dass eine Detailansicht geöffnet werden muss. [Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dashboards/create-scorecard.html?lang=de#apply-visualizations) | 7. Oktober 2021 |
+| Customer Journey Analytics Audit Logs-API | Über den API-Endpunkt [Administratorprotokoll](https://adobe.io/cja-apis/docs/endpoints/auditlogs/) können Sie Administratorprotokoll-Daten von Adobe anfordern. Es ist ein wichtiger Teil der Sicherheitskonformität sowie zum Auditing von Daten oder Benutzeraktionen. | 7. Oktober 2021 |
+| Quick [!UICONTROL Filter Builder] | Ermöglicht es Business-Anwendern, Standardsegmente in einem vereinfachten Inline-Projekt-Workflow schnell zu nutzen. Sie müssen nicht zum [!UICONTROL Filter Builder] wechseln. [Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-components/cja-filters/quick-filters.html?lang=de) | 21. Oktober 2021 |
+| Verbesserungen bei der Suche in der linken Leiste in Analysis Workspace | 1) Bei der Suche in der linken Leiste werden exakte Übereinstimmungen vor weit gefassten Übereinstimmungen priorisiert, zusätzlich zur weiteren Berücksichtigung von Neuigkeit und Relevanz der Komponenten. 2) Es werden übereinstimmende Zeichen hervorgehoben, um Suchergebnisse leichter verständlich zu machen. 3) Klassifizierungen, die sich auf eine Dimension beziehen, lassen sich leichter finden. 4) Schließlich wird die Suche mit Platzhaltern (`*`) unterstützt, sodass bestimmte benötigte Komponenten leichter gefunden werden können. Hinweis: Die Suche mit Platzhalter funktioniert noch nicht auf der Dimensionselement-Ebene. | 21. Oktober 2021 |
+| Analysis Workspace Dark Theme | Dunkles Design ist als Anzeigeoption verfügbar. | 21. Oktober 2021 |
+
+{style=&quot;table-layout:auto&quot;}
 
 
+## September 2021 {#0921}
 
-## Januar 2021
+| Funktion | Beschreibung | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/technotes/releases.html?lang=en) – geplantes Datum |
+| ----------- | ---------- | ----- |
+| Deduplizierung der Metrik | Customer Journey Analytics (CJA) kann jetzt Instanzen einer Metrik deduplizieren. Wenn derselbe Wert in einer Spalte (entweder in derselben oder in einer anderen Spalte) angezeigt wird, können Sie die Erhöhung der Kennzahl verhindern. Deduplizierung verhindert eine Überzählung von Schlüsselmetriken und erhöht das Vertrauen in Ihre Daten. [Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-settings/metric-deduplication.html?lang=de) | 16. September 2021 |
+| Unterstützung der Sommerzeit in Berichten | Alle Daten in CJA werden in UTC gespeichert (ohne spezifische Zeitzone). [!UICONTROL Data Views] in CJA kann jetzt Daten ändern, um die einstündige Erhöhung oder Verringerung aufgrund der Sommerzeit zu berücksichtigen. [Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/create-dataview.html?lang=de#calendar) | 16. September 2021 |
+| [!UICONTROL Benutzerdefinierte Kalender] | Ermöglicht die Auswahl eines anderen Kalendertyps (z. B. [!UICONTROL retail 4-4-5]) für eine Datenansicht. Sie können mehrere Datenansichten erstellen, die auf derselben Verbindung basieren, um dieselben Daten in verschiedenen Kalenderformaten anzuzeigen. [Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/create-dataview.html?lang=en#calendar) | 16. September 2021 |
+| Unterstützung von Booleschen Feldern | CJA unterstützt jetzt boolesche Felder. [Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-settings/behavior.html?lang=de) | 16. September 2021 |
+| Neues Erlebnis bei [!UICONTROL Connections] Info | Diese Verbesserung der [!UICONTROL Connections]-Benutzeroberfläche informiert Sie darüber, ob und wann Ihre Daten für das Reporting verwendet werden können. Sie können damit auch jegliche Probleme bei der Datenverarbeitung nachverfolgen. [Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/manage-connections.html?lang=de) | 20. September 2021 |
 
-| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=de) – geplantes Datum | Beschreibung |
+{style=&quot;table-layout:auto&quot;}
+
+## August 2021 {#0821}
+
+| Funktion | Beschreibung | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=de) – geplantes Datum |
+| ----------- | ---------- | ----- |
+| Neues Erlebnis zu Verbindungsinformationen | Diese Verbesserung der Verbindungs-Benutzeroberfläche informiert Sie darüber, ob und wann Ihre Daten für das Reporting verwendet werden können. Sie können damit auch jegliche Probleme bei der Datenverarbeitung nachverfolgen. [Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/manage-connections.html?lang=en) | 19. August 2021 |
+| Kontrolle der Groß-/Kleinschreibung in Datenansichtsdimensionen | Mit dieser Einstellung können Sie steuern, ob bei Dimensionswerten in Customer Journey Analytics zwischen Groß- und Kleinschreibung unterschieden wird. Dies ermöglicht die Deduplizierung von Zeilen mit demselben Wert, jedoch einer anderen Groß-/Kleinschreibung. [Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/create-dataview.html?lang=de#configure-behavior-settings) | 19. August 2021 |
+
+{style=&quot;table-layout:auto&quot;}
+
+## Juli 2021 {#0721}
+
+| Funktion | Beschreibung | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=en) – geplantes Datum |
+| ----------- | ---------- | ----- |
+| Neues Erlebnis zu Verbindungsinformationen | Diese Verbesserung der Verbindungs-Benutzeroberfläche informiert Sie darüber, ob und wann Ihre Daten für das Reporting verwendet werden können. Sie können damit auch jegliche Probleme bei der Datenverarbeitung nachverfolgen. [Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/manage-connections.html?lang=en) | 19. August 2021 |
+
+{style=&quot;table-layout:auto&quot;}
+
+## Mai 2021 {#0521}
+
+| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=en) – geplantes Datum | Beschreibung |
+| ----------- | ---------- | ----- |
+| Workspace: Vorherige Projektversionen | 20. Mai 2021 | Ermöglicht das Laden früherer Versionen eines Workspace-Projekts, um unerwünschte Änderungen rückgängig zu machen oder einfach zu einer bevorzugten älteren Version zurückzukehren. [Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/build-workspace-project/save-projects.html?lang=de) |
+
+{style=&quot;table-layout:auto&quot;}
+
+## April 2021 {#0421}
+
+| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=en) – geplantes Datum | Beschreibung |
+| ----------- | ---------- | ----- |
+| Verbesserte Ansichten von Customer Journey Analytics-Daten | 22. April 2021 | Verbesserte Datenansichten erweitern Ihre Flexibilität bei der Erstellung von Metriken und Dimensionen aus XDM-Schema-Feldern. Sie können ein Zeichenfolgenfeld als Metrik verwenden. Sie können ein numerisches Feld als Dimension verwenden und mehrere Metriken aus demselben Feld mit verschiedenen Attributionsmodellen und Lookback-Fenstern erstellen. Darüber hinaus können Sie Metriken und Dimensionen über verschiedene Ansichten hinweg kompatibel machen, Komponenten aus dem Reporting ausblenden und Werte ein-/ausschließen, Bucketing verwenden und vieles mehr. [Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/data-views.html?lang=de) |
+| Workspace: Unterstützung für terminierte Berichte | 7. April 2021 | Terminierte Berichte werden jetzt in CJA unterstützt. |
+| Analytics-Dashboards: Benutzerdefinierte Datumsbereiche | 22. April 2021 | Ermöglicht Benutzern der Analytics Mobile App, neben den derzeit verfügbaren vordefinierten Datumsbereichen auch benutzerdefinierte Datumsbereiche auf ihre Scorecards anzuwenden. |
+| Workspace: Vorherige Projektversionen | 20. Mai 2021 | Ermöglicht das Laden früherer Versionen eines Workspace-Projekts, um unerwünschte Änderungen rückgängig zu machen oder einfach zu einer bevorzugten älteren Version zurückzukehren. |
+
+{style=&quot;table-layout:auto&quot;}
+
+## März 2021 {#0321}
+
+| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=en) – geplantes Datum | Beschreibung |
+| ----------- | ---------- | ----- |
+| Unterstützung für [!UICONTROL Adobe Analytics-Dashboards] | 25. März 2021 | [!UICONTROL Customer Journey Analytics] (CJA) unterstützt jetzt den [!UICONTROL Scorecard Builder für Adobe Analytics-Dashboards] und die Mobile App. Auf diese Weise können Führungskräfte und Geschäftsbenutzer ihre Kanal-KPIs auf Basis von CJA-Daten anzeigen, indem sie dieselbe App verwenden, die sie möglicherweise bereits für Adobe Analytics verwenden. |
+| Analysis Workspace: **[!UICONTROL Komponenten]** > **[!UICONTROL Benutzervoreinstellungen]** | 25. März 2021 | Auf der Seite [!UICONTROL Komponenten] > [!UICONTROL Benutzervoreinstellungen] können Sie die Einstellungen von [!UICONTROL Analysis Workspace] und dessen zugehörige Komponenten für Ihren Benutzer verwalten. Die [!UICONTROL Benutzervoreinstellungen] gelten für alle neuen Projekte und Bedienfelder. <br>**Hinweis:** Die folgenden Einstellungen wurden auf die Seite [!UICONTROL Benutzervoreinstellungen] verschoben:<ul><li>Arbeitsbereich-Projekte: „Hilfe“ > „Tipps aktivieren“</li><li>Arbeitsbereich-Projekte: Option _Neue Projekte mit diesem Bedienfeld beginnen_ mit leerem Bedienfeld</li></ul> |
+| Analysis Workspace: [!UICONTROL Histogram Smart Bucket Prediction] | 25. März 2021 | [!UICONTROL Histogramm Smart Bucket Prediction] hilft bei Histogrammen mit hoher Kardinalität, indem automatisch die richtige Breite und Anzahl der Behälter für Ihren Datenbogen identifiziert wird. Bei Metriken mit niedriger Kardinalität verhält sich die Visualisierung genauso wie zuvor. |
+| Unterstützung von Analytics-Dashboards für Customer Journey Analytics | 25. März 2021 | Die Analytics-Dashboards-App unterstützt jetzt Customer Journey Analytics. Benutzer mit Customer Journey Analytics können KPIs aus allen Daten, die in der Analytics-Dashboards-App in Adobe Experience Platform aufgenommen werden, überlagern. Mit Customer Journey Analytics können Sie für eine echte Ansicht des Kundenerlebnisses mehrere Datenquellen mit mehreren Kanälen kombinieren. Mit der Analytics-Dashboard-App erhalten Sie jederzeit und überall eine aktuelle, ganzheitliche Ansicht Ihres Unternehmens. [Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dashboards/curator.html?lang=de#cja-dashboards). |
+
+{style=&quot;table-layout:auto&quot;}
+
+## Februar 2021 {#0221}
+
+| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=en) – geplantes Datum | Beschreibung |
+| ----------- | ---------- | ----- |
+| Analysis Workspace – Komponentenauswahl | 4. Februar 2021 | Die Dropdown-/Dropzone-Komponente aus [!UICONTROL Quick Insights] wurde allen Ablagebereichen in [!UICONTROL Workspace] hinzugefügt. Diese Verbesserung ermöglicht es Ihnen, Optionen in einer Dropdown-Liste kompatibler Komponenten zu wählen oder den Raum weiterhin als Ablagebereich zu verwenden. |
+| Customer Journey Analytics-API | 18. Februar 2021 | Die Customer Journey Analytics-APIs sind jetzt verfügbar. Mit diesen APIs können Sie programmgesteuert Komponenten bearbeiten und Berichte abrufen. Weitere Informationen finden Sie in der [Customer Journey Analytics-API-Dokumentation](https://www.adobe.io/cja-apis/docs). |
+
+{style=&quot;table-layout:auto&quot;}
+
+## Januar 2021 {#0121}
+
+| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=en) – geplantes Datum | Beschreibung |
 | ----------- | ---------- | ----- |
 | [!UICONTROL Geräte]- und [!UICONTROL Geografie]-Dimensionen | 30. Oktober 2020 | Diese Dimensionen sind jetzt standardmäßig als Teil der [Standardsuche](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/standard-lookups.html) Unterstützungsprojekt in Adobe Analytics [!UICONTROL Source Connector]. Dieser dringend benötigte Zusatz erhöht die [Parität zwischen Adobe Analytics und CJA](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-overview/cja-aa.html?lang=de#cja-overview). |
 | Journey IQ: [!UICONTROL Kanalübergreifende Analyse] | 11. Januar 2021 | Journey IQ: [!UICONTROL Kanalübergreifende Analyse] ermöglicht es Ihnen, einen Adobe Analytics-Ereignis-Datensatz (oder einen anderen) im Experience Platform Data Lake von einem ID-Namespace zum anderen neu zu erstellen. In der Regel können Sie den Ereignis-Datensatz von einer Cookie-basierten ID zu einer personenbasierten ID neu zuweisen. Auf diese Weise kann der neu zugewiesene Datensatz mit anderen personenbasierten Daten in einer CJA-Verbindung kombiniert werden, was eine geräteübergreifende und kanalübergreifende Analyse in Analysis Workspace ermöglicht. [Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/cca/overview.html?lang=de#cja-connections) |
 | Analysis Workspace – Komponentenauswahl | 4. Februar 2021 | Die Dropdown-/Dropzone-Komponente aus [!UICONTROL Quick Insights] wurde allen Ablagebereichen in [!UICONTROL Workspace] hinzugefügt. Diese Verbesserung ermöglicht es Ihnen, Optionen in einer Dropdown-Liste kompatibler Komponenten zu wählen oder den Raum weiterhin als Ablagebereich zu verwenden. |
 | Analysis Workspace – Bild-URLs | 14. Januar 2021 | Sie können Workspace-Projekten Bilder hinzufügen, indem Sie auf eine öffentliche Bild-URL verweisen. |
 
-
-## 2020
-
-
-## 2019
+{style=&quot;table-layout:auto&quot;}
