--- a/help/release-notes/2022.md
+++ b/help/release-notes/2022.md
@@ -2,10 +2,11 @@
 title: Versionshinweise zu Customer Journey Analytics für 2022 anzeigen
 description: Versionshinweise zu CJA für 2022
 feature: Release Notes
-source-git-commit: 6091cb5b9ec5e0d2d9fd57a69c7cee00439e1c66
+exl-id: 61556c50-7a2b-4f08-a387-99045d31f0cf
+source-git-commit: 42428635703c7b6e5d8bd28a4fcad3695d95f574
 workflow-type: tm+mt
-source-wordcount: '210'
-ht-degree: 100%
+source-wordcount: '213'
+ht-degree: 97%
 
 ---
 
@@ -17,7 +18,7 @@ ht-degree: 100%
 
 | Funktion | Beschreibung | Zieldatum |
 | ----------- | ---------- | ----- |
-| [!UICONTROL Persistenz]-Optionen für Binding-Dimensionen und Binding-Metriken | Beim Erstellen oder Bearbeiten einer Datenansicht können Sie die Persistenz einer Dimension an eine andere Dimension oder Metrik binden. Dieses Konzept wird in Reports &amp; Analytics als _Merchandising_ bezeichnet und jetzt in Customer Journey Analytics unterstützt. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-settings/persistence.html?lang=de#binding-dimension) | 19. Januar 2022 |
+| [!UICONTROL Persistenz]-Optionen für Binding-Dimensionen und Binding-Metriken | Beim Erstellen oder Bearbeiten einer Datenansicht können Sie die Persistenz einer Dimension an eine andere Dimension oder Metrik binden. Dieses Konzept wird in Reports &amp; Analytics als _Merchandising_ bezeichnet und jetzt in Customer Journey Analytics unterstützt. [Weitere Infos](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-settings/persistence.html?lang=de#binding-dimension) und [Anwendungsfall](/help/use-cases/binding-dimensions-metrics.md) | 19. Januar 2022 |
 
 ## Weitere Updates
 
